[tool.poetry]
name = "lobo_wireless"
version = "0.2.1"
description = "WLAN connect module."
authors = ["Lukasz Lobocki"]
license = "CC0 v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
esptool = "^4.5.1"
adafruit-ampy = "^1.1.0"
docopt = "^0.6.2"
python-semantic-release = "^7.33.2"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = false                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
